violating_resources/pod-security-policy/privileged-containers/samples/psp-privileged-container/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-privileged-disallowed
  name: nginx-privileged-disallowed
  labels:
    app: nginx-privileged
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
