violating_resources/pod-security-policy/privileged-containers/samples/psp-privileged-container/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-privileged-allowed
  name: nginx-privileged-allowed
  labels:
    app: nginx-privileged
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
