violating_resources/pod-security-policy/privileged-containers/samples/psp-privileged-container/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-privileged-disallowed
  name: psp-privileged-container-example-disallowed
  labels:
    app: nginx-privileged
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
